Removed mosh, updated script usage
Former-commit-id: d4a9d773b13c9aeb719003e4eda46b216b5ca839

--- a/linux/install
+++ b/linux/install
@@ -6,8 +6,6 @@ script_dir=`dirname "$script_path"`
 slinks=(
 "$script_dir/binaries/tmux-*:$HOME/.local/bin/tmux"
 "$script_dir/binaries/nvim-*:$HOME/.local/bin/nvim"
-"$script_dir/binaries/mosh-client-*:$HOME/.local/bin/mosh-client"
-"$script_dir/binaries/mosh-server-*:$HOME/.local/bin/mosh-server"
 "$script_dir/configs/tmux.conf:$HOME/.tmux.conf"
 "$script_dir/configs/init.vim:$HOME/.vimrc"
 "$script_dir/configs/init.vim:$HOME/.local/nvim/init.vim"
@@ -79,7 +77,13 @@ config_zsh() {
 
 force=
 zsh=
-usage(){ echo "Usage: $0 [-f] [-h]" 1>&2; exit 1; }
+usage(){ 
+   echo "Usage: $0 [-fzh]"
+   echo "  -f force install. Replace existing files"
+   echo "  -z install also zsh"
+   echo "  -h show this text"
+   exit 1
+}
 
 while getopts "fhz" opt; do
    case "$opt" in
