Added git config windows
Former-commit-id: c104721dcc870f65efa3ecba331b1f4b35fcd4e4

--- a/windows/install
+++ b/windows/install
@@ -5,6 +5,7 @@ script_dir=`dirname "$script_path"`
 
 slinks=(
 "$script_dir/configs/minttyrc:$HOME/.minttyrc"
+"$script_dir/configs/gitconfig:$HOME/.gitconfig"
 )
 
 split() {
