Fixed another bug in old bash?

--- a/linux/install
+++ b/linux/install
@@ -32,7 +32,7 @@ blu=$'\e[34m'
 
 make_links() {
   for elem in "${links[@]}"; do
-    elem="${elem//;/$'\n'''}"
+    elem="${elem//;/$'\n'}"
     readarray -t arr <<<"$elem"
 
     FROM_PATH="${arr[0]}"
