--- a/install
+++ b/install
@@ -8,7 +8,7 @@ downloads=(
 )
 
 clones=(
-  "SpaceVim;github.com/SpaceVim/SpaceVim"
+  "SpaceVim;github.com/SpaceVim/SpaceVim;v1.3.0"
   "fzf;github.com/junegunn/fzf"
 )
 
@@ -56,9 +56,11 @@ make_clones() {
     elem="${elem//;/$'\n'}"
     readarray -t arr <<<"$elem"
 
+    BRAN=
+    DEST="$HOME/.local/$NAME"
     NAME="${arr[0]}"
     REPO="${arr[1]}"
-    DEST="${arr[2]:-$HOME/.local/$NAME}"
+    [[ -z "${arr[2]}" ]] || BRAN="--branch ${arr[2]}"
 
     [[ -z "$force" ]] || rm -rf "$DEST"
 
@@ -67,7 +69,7 @@ make_clones() {
       git -C $DEST pull
     else
       echo "${yel}Installing \"$NAME\"...$nor"
-      git clone --depth=1 https://$REPO $DEST
+      git clone --depth=1 $BRAN https://$REPO $DEST
       echo -e "${grn}DONE${nor}"
     fi
   done
